# slick-logger

./: BENCHMARK_SETUP.md  CHANGELOG  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: CMakeLists.txt  README.md  benchmark_main.cpp  latency_benchmark.cpp
cmake/: slick-loggerConfig.cmake.in
examples/: CMakeLists.txt
include/slick/: logger.hpp
src/: logger.hpp
tests/: CMakeLists.txt  test_logger.cpp  test_shared_library.cpp
tests/plugin/: plugin.cpp
